update post && add friend

--- a/_posts/2016-03-10-CentOS搭建开发环境.md
+++ b/_posts/2016-03-10-CentOS搭建开发环境.md
@@ -17,7 +17,7 @@ yum update
 yum groupinstall -y "Development Tools"
 yum install cmake wget openssl openssl-devel yum-utils
 yum install bash-completion lrzsz scl-utils screen net-tools telnet
-yum install curl libcurl libcurl-devel bzip2 bzip2-deve
+yum install curl libcurl libcurl-devel bzip2 bzip2-deve libffi-devel
 yum install freetype freetype-devel libjpeg libjpeg-devel
 yum install libpng libpng-devel sqlite sqlite-devel
 ```
@@ -84,7 +84,7 @@ vi /etc/ssh/sshd_config
 service sshd restart
 ```
 
-在服务器 authorized_keys 文件中新添加一行公钥
+在服务器 authorized_keys 文件中新添加一行公钥，方便一点可以使用`ssh-copy-id`命令
 
 ```bash
 chmod 700 ~/.ssh
@@ -448,7 +448,15 @@ php -v
 php -m
 ```
 
-配置文件位于`/etc/php.ini`
+配置文件位于`/etc/php.ini`和`/etc/php-fpm.d/www.conf`,小内存建议调整下php-fpm
+
+```conf
+pm = dynamic
+pm.max_children = 10
+pm.start_servers = 2
+pm.min_spare_servers = 2
+pm.max_spare_servers = 10
+```
 
 ```sh
 #启动,restart-重启，stop-停止
