--- a/_posts/2017-08-04-用maven构建项目.md
+++ b/_posts/2017-08-04-用maven构建项目.md
@@ -4,387 +4,424 @@ title: 用maven构建项目
 categories: [Java]
 ---
 
-Maven是一个项目管理工具，它包含了一个项目对象模型 (Project Object Model)，一组标准集合，一个项目生命周期(Project Lifecycle)，一个依赖管理系统(Dependency Management System)，和用来运行定义在生命周期阶段(phase)中插件(plugin)目标(goal)的逻辑。当你使用Maven的时候，你用一个明确定义的项目对象模型来描述你的项目，然后Maven可以应用横切的逻辑，这些逻辑来自一组共享的（或者自定义的）插件。
+官网下载地址[Apache Maven](http://maven.apache.org/)
 
-此外，Maven能够很方便的帮你管理项目报告，生成站点，管理JAR文件，等等
+## pom.xml 文件
 
-## maven基础
-
-### 下载
-
-到官网[Apache Maven](http://maven.apache.org/)去下载
-
-### pom.xml文件
-
-pom作为项目对象模型。通过xml表示maven项目，使用pom.xml来实现。主要描述了项目：包括配置文件；开发者需要遵循的规则，缺陷管理系统，组织和licenses，项目的url，项目的依赖性，以及其他所有的项目相关因素。
+pom.xml 是用来记录，项目信息、项目依赖、插件、开发者等信息的，一个标准的 pom 文件一般结构如下
 
 ```xml
 <project>
-    <modelVersion>4.0.0</modelVersion>
-    <groupId>net.tmaize</groupId>
-    <artifactId>mvn-web</artifactId>
-    <version>0.0.1-SNAPSHOT</version>
-    <packaging>war</packaging>
+  <modelVersion>4.0.0</modelVersion>
 
-    <build>
-        <plugins>
-            ....
-        </plugins>
-    </build>
-    <dependencies>
-        ....
-    </dependencies>
+  <!-- 项目信息 -->
+  <groupId>net.tmaize</groupId>
+  <artifactId>mvn-web</artifactId>
+  <version>0.0.1-SNAPSHOT</version>
+
+  <!-- 打包方式 jar war pom-->
+  <packaging>war</packaging>
+
+  <!-- 配置信息 通过${name}使用-->
+  <properties>
+    <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
+    <junit.version>4.12</junit.version>
+  </properties>
+
+  <!-- 项目依赖信息 -->
+  <dependencies>
+    <dependency>
+      <groupId>junit</groupId>
+      <artifactId>junit</artifactId>
+      <version>${junit.version}</version>
+      <scope>test</scope>
+    </dependency>
+  </dependencies>
+
+  <!-- 构建过程 -->
+  <build>
+    <!-- 部分插件的拓展，如wagon-maven-plugin插件需要拓展wagon-ssh -->
+    <extensions></extensions>
+    <!-- 使用的插件 -->
+    <plugins></plugins>
+  </build>
+
+  <!-- 依赖管理器，里面声明的依赖不会被导入，只是声明依赖的版本等信息 -->
+  <!-- 子项目直接使用groupId和artifactId就能引入，其余信息继承 -->
+  <dependencyManagement></dependencyManagement>
+
+  <!-- 作用同dependencyManagement -->
+  <pluginManagement></pluginManagement>
 </project>
 ```
 
-### 标准目录结构
+## 项目目录结构
 
-使用maven就必须遵守maven的目录结构，不然会编译失败的
+使用 maven 就必须遵守 maven 的目录结构，不然会编译失败的
 
-java项目结构如下
+java 项目结构如下
 
 ```
 src
-    main
-        java
-        resource
-    test
-        java
-        resource
+  main
+    java
+    resource
+  test
+    java
+    resource
 target
 pom.xml
 ```
 
-web项目结构如下
+web 项目结构如下
 
 ```
 src
-    main
-        java
-        resource
-        webapp
-        WEN-INF
-            web.xml
-    test
-        java
-        resource
+  main
+    java
+    resource
+    webapp
+      WEN-INF
+        web.xml
+  test
+    java
+    resource
 target
 pom.xml
 ```
 
-### 常用命令
+## 常用命令
 
-+ mvn clean
+将项目根目录下 target 目录清理掉
 
-	将项目根目录下target目录清理掉
+```
+mvn clean
+```
 
-+ mvn compile
+将项目中的 java 文件编译为 class 文件
 
-	将项目中的java文件编译为class文件
+```
+mvn compile
+```
 
-+ mvn test
+单元测试，测试类名有要求 XxxxTest.java，项目根目录下 src/test/java 目录下的单元测试类都会执行
 
-	单元测试，测试类名有要求XxxxTest.java
+```
+mvn test
+```
 
-	项目根目录下src/test/java目录下的单元测试类都会执行
+项目打包，生成的包在 target 的根目录。web 项目会打成 war 包，java 项目会打成 jar 包
 
-+ mvn package
+```
+mvn package
+```
 
-	项目打包，生成的包在target的根目录。web项目会打成war包，java项目会打成jar包
+将项目打包并安装到本地仓库，方便在其他项目上引用
 
-+ mvn install:安装
+```
+mvn install
+```
 
-	将项目打包并安装到本地仓库，方便在其他项目上用。好处是如果项目有变动，只需要再次安装即可，其他的项目都不需要变动依赖
+## 生命周期
 
-### 生命周期
+所谓的生命周期就是在执行一条 maven 命令时的一个流程,一般执行后面的命令前面的操作会自动执行
 
-所谓的生命周期就是在一套生命周期内，执行后面的命令前面的操作会自动执行
+DefaultLifeCyle 默认流程顺序如下
 
-在Maven中存在三套生命周期，同时每一套生命周期相互独立互不影响
+```nocode
+validate
+initialize
+generate-sources
+process-sources
+generate-resources
+process-resources
+compile
+process-classes
+generate-test-sources
+process-test-sources
+generate-test-resources
+process-test-resources
+test-compile
+process-test-classes
+test
+prepare-package
+package
+pre-integration-test
+integration-test
+post-integration-test
+verify
+install
+deploy
+```
 
-注意每个生命周期里面又有好多步骤，但是可以总结为下面几个主要步骤
+CleanLifeCyle 生命周期如下，一般都是执行`mvn clean`,不会走到 post-clean 阶段
 
-CleanLifeCyle：清理生命周期,命令有clean
+```
+pre-clean
+clean
+post-clean
+```
 
-defaultLifeCyle：默认生命周期,命令有compile，test，package，install，deploy
+SiteLifeCyle 生命周期如下
 
-siteLifeCyle：站点生命周期,命令有site
+```
+pre-site
+site
+post-site
+site-deploy
+```
 
-### 依赖范围
+## 依赖范围 scope
 
 ![01](01.png)
 
-比如说servlet-api，在做项目的时候需要，但是把它打成war包发布到tomcat时不能把它编译进应为在tomcat里面已经有了servlet-api了，会有jar包冲突，所以要将servlet-api的依赖范围设置为provided
+比如说 servlet-api，在做项目的时候需要，但是把它打成 war 包发布到 tomcat 时不能把它编译进应为在 tomcat 里面已经有了 servlet-api 了，会有 jar 包冲突，所以要将 servlet-api 的依赖范围设置为 provided
 
-![02](02.png)
+注意：在 IDA 中，通过 IDEA 运行 main 目录中的 Java 代码，provided 中的依赖不会加进来，需要设置运行配置为 Include dependencies with "Provided" scope
+
+## 插件 plugin
+
+插件是与在每个声明周期的一些一些任务，maven 在执行的时候有一些自己的固有官方插件,最常用的就是 maven-compiler-plugin,在 compile 阶段，该插件会自动执行用来编辑 Java 代码
+
+当然可以在自己的 pom.xml 中重新定义该插件来升级/覆盖默认的插件配置
+
+```xml
+<plugin>
+    <groupId>org.apache.maven.plugins</groupId>
+    <artifactId>maven-compiler-plugin</artifactId>
+    <version>3.5.1</version>
+    <configuration>
+        <source>1.8</source>
+        <target>1.8</target>
+        <encoding>${project.build.sourceEncoding}</encoding>
+    </configuration>
+</plugin>
 ```
-<dependency>
-	<groupId>javax.servlet</groupId>
-	<artifactId>javax.servlet-api</artifactId>
-	<version>3.0.1</version>
-	<scope>provided</scope>
-</dependency>
+
+再比如在 Servlet 3 中，使用注解配置不使用`web.xml`导致 package 失败，通过覆盖来升级版本来支持无`web.xml`的打包
+
+```xml
+<plugin>
+    <!-- 使用3.0版本，使用注解，无需添加web.xml-->
+    <groupId>org.apache.maven.plugins</groupId>
+    <artifactId>maven-war-plugin</artifactId>
+    <version>3.0.0</version>
+</plugin>
 ```
 
-### 解决依赖冲突
+除了在打包期间会自动执行的，还有一些插件需要手动通过命令去执行,比如 tomcat 插件，通过`mvn tomcat7:run`
 
-+ 有时候jar包会有冲突。首先maven有一套自己的冲突解决方案
+```xml
+<plugin>
+    <groupId>org.apache.tomcat.maven</groupId>
+    <artifactId>tomcat7-maven-plugin</artifactId>
+    <version>2.1</version>
+    <configuration>
+        <path>/</path>
+        <contextReloadable>true</contextReloadable>
+        <uriEncoding>UTF-8</uriEncoding>
+    </configuration>
+</plugin>
+```
 
-1. 声明者优先原则 ，如果有冲突，优先用以最先依赖加进来的jar
+当然了，如果有需要也可以自己开发插件。提示：使用 IDEA 等工具 可以看到所使用的插件及其支持的命令
+
+当未引入任何插件的情况下，如下是默认依赖的一些插件，可以猜测到在`mvn compile`时，应该会执行到`mvn compile:compile`插件
+
+![02](02.jpg)
+
+## 依赖冲突
+
+有时候 jar 包会有冲突。首先 maven 有一套自己的冲突解决方案
+
+1. 声明者优先原则 ，如果有冲突，优先用以最先依赖加进来的 jar
 
 2. 路径近者优先原则 直接依赖高于传递依赖
 
-如果通过上面两个步骤无法解决依赖问题还可以手动排除依赖	
+如果通过上面两个步骤无法解决依赖问题还可以手动排除依赖
 
-+ 或者手动排除依赖，得到自己想要的
-
-比如下图，我想使用高版本的commons-logging，但是又想把我的高版本commons-logging放在spring-webmvc后面，可以通过exclude手动排除jar包
+比如下图，我想使用高版本的 commons-logging，但是又想把我的高版本 commons-logging 放在 spring-webmvc 后面，可以通过 exclude 手动排除 jar 包
 
 ![03](03.png)
 
 ```xml
 <dependency>
-	<groupId>org.springframework</groupId>
-	<artifactId>spring-webmvc</artifactId>
-	<version>4.1.6.RELEASE</version>
-	<exclusions>
-		<exclusion>
-			<groupId>commons-logging</groupId>
-			<artifactId>commons-logging</artifactId>
-		</exclusion>
-	</exclusions>
+  <groupId>org.springframework</groupId>
+  <artifactId>spring-webmvc</artifactId>
+  <version>4.1.6.RELEASE</version>
+  <exclusions>
+    <exclusion>
+      <groupId>commons-logging</groupId>
+      <artifactId>commons-logging</artifactId>
+    </exclusion>
+  </exclusions>
 </dependency>
 ```
 
-+ 再或者使用版本锁定
+## 根据模板生成项目
 
-这样的话最终使用的jar包是我指定的哪个版本
+根据语法来看，其实就是执行 archetype 插件,默认有 10 个模板，已下载的模板在`${repo}/org/apache/maven/archetypes`
 
-```xml
-<dependencyManagement>
-	<dependencies>
-		<dependency>
-			<groupId>org.springframework</groupId>
-			<artifactId>spring-context</artifactId>
-			<version>4.3.10.RELEASE</version>
-		</dependency>
-	</dependencies>
-</dependencyManagement>
+该插件还支持建立自己的模板,安装第三方模板
 
-<dependencies>
-	<dependency>
-		<groupId>org.springframework</groupId>
-		<artifactId>spring-context</artifactId>
-	</dependency>
-</dependencies>
+```
+# 进入交互模式
+mvn archetype:generate
+mvn archetype:generate -DarchetypeArtifactId=maven-archetype-quickstart
 ```
 
-或者更规范一些,把版本集中起来，方便管理
+快速生成 java/web 项目
+
+```
+mvn archetype:generate -DinteractiveMode=false -DarchetypeArtifactId=maven-archetype-quickstart -DgroupId=com.demo -DartifactId=name
+mvn archetype:generate -DinteractiveMode=false -DarchetypeArtifactId=maven-archetype-webapp -DgroupId=com.demo -DartifactId=name
+```
+
+## 父项目
+
+所有的 POM 都继承自一个父 POM，如果未声明，就继承默认的父 POM。父项目的作用是用来简化子项目配置和声明公共变量的，比如在父项目中声明的 dependencies 所有的子项目都会被依赖，无需再次引入，还有如父项目声明的 properties 都可以直接使用
+
+最终在执行命令的时候会将父项目的 pom.xml 和自身的 pom.xml 合并，通过`mvn help:effective-pom`命令可以看到最终使用到的 pom.xml
+
+下面就是一个常用的用法，dependencyManagement，pluginManagement。在父项目中声明了依赖的版本，子项目只需要声明使用即可，无需关心版本
+
+父 POM
 
 ```xml
 <properties>
-	<junit-version>4.12</junit-version>
+  <spring.version>4.3.10.RELEASE</spring.version>
 </properties>
 
 <dependencyManagement>
-	<dependencies>
-		<dependency>
-			<groupId>junit</groupId>
-			<artifactId>junit</artifactId>
-			<version>${junit-version}</version>
-		</dependency>
-	</dependencies>
+  <dependencies>
+    <dependency>
+      <groupId>org.springframework</groupId>
+      <artifactId>spring-context</artifactId>
+      <version>${spring.version}</version>
+    </dependency>
+  </dependencies>
 </dependencyManagement>
 ```
 
-![04](04.jpg)
-
-### 小技巧
-
-`mvn archetype:generate `插件可以使用不同的模版快速生成一个maven项目
-
-`mvn help:effective-pom` 显示项目完整的依赖
-
-`mvn cobertura:cobertura` 生成代码测试的覆盖率
-
-为不同的环境配置不同的数据库连接信息
+子 POM
 
 ```xml
-<profiles>
-	<profile>
-		<id>dev</id>
-		<activation>
-			<!-- 代表当前为dev环境 -->
-			<activeByDefault>true</activeByDefault>
-		</activation>
-		<properties>
-			<url>jdbc:mysql://127.0.0.1:3306/dev?characterEncoding=utf-8</url>
-		</properties>
-	</profile>
-	<profile>
-		<id>run</id>
-		<properties>
-			<url>jdbc:mysql://127.0.0.1:3306/book?characterEncoding=utf-8</url>
-		</properties>
-	</profile>
-</profiles>
-
-<!-- 添加要过滤的目录 -->
-<build>
-	<resources>
-		<resource>
-			<directory>${project.basedir}/src/main/resources</directory>
-			<filtering>true</filtering>
-		</resource>
-	</resources>
-</build>
-```
-
-在数据库的配置文件一行`url=${url}`,在项目运行的时候会根据pom中指定的环境替换`${url}`,只需要改变activeByDefault的位置即可
-
-## 在eclipse使用maven
-
-m2e插件，eclipse自带，只需要配置一下即可
-
-默认也自带maven，一般不使用，使用自己下载的即可
-
-### 基本配置
-
-找到maven的安装目录，在conf/settings.xml里面配置本地仓库位置
-
-```xml
-<localRepository>E:/apache-maven-3.3.9/local-repo</localRepository>
-```
-
-在eclipse里面安装设置maven
-
-![05](05.png)
-
-![06](06.png)
-
-刷新设文件，在本地仓库建立索引
-
-![07](07.png)
-
-
-### 建立项目
-
-注意不要再建立Java Project了，要建立Maven Project
-
-先选择项目位置,最上面勾选了会跳过模板选择界面，使用最简单的项目目录骨架
-
-![08](08.png)
-
-Packaging决定了是web项目还是java项目，选错了没关系，在pom.xml文件里面都可以更改的
-
-![09](09.png)
-
-![10](10.png)
-
-### 项目依赖/插件配置
-
-一般eclipse会自动分析pom.xml里面的依赖，并自动构建，比如下载jar文件
-
-也可以在项目上右键 Maven-update project 重新构建项目,如果项目出现感叹号的时候可以重新构建一下
-
-![11](11.png)
-
-```xml
-
-<!-- 插件 -->
-<build>
-	<plugins>
-		<plugin>
-			<groupId>org.apache.maven.plugins</groupId>
-			<artifactId>maven-compiler-plugin</artifactId>
-			<version>3.1</version>
-			<configuration>
-				<source>1.8</source>
-				<target>1.8</target>
-				<encoding>utf-8</encoding>
-			</configuration>
-		</plugin>
-	</plugins>
-</build>
-<!-- 依赖 -->
 <dependencies>
-	<dependency>
-		<groupId>javax.servlet</groupId>
-		<artifactId>javax.servlet-api</artifactId>
-		<version>3.0.1</version>
-		<scope>provided</scope>
-	</dependency>
+  <dependency>
+    <groupId>org.springframework</groupId>
+    <artifactId>spring-context</artifactId>
+  </dependency>
 </dependencies>
 ```
 
-### 项目的运行
+## 仓库和镜像
 
-java项目直接运行，对于web项目有下面两种方式运行
+pom.xml 中配置了许多依赖，需要到 repository 中去下载，但是一般我们的 pom.xml 不会去声明 repository，因为默认的父项目已经声明了一个，默认的仓库信息如下，可通过通过`mvn help:effective-pom`查看
 
-第一个Maven Build 是直接使用上次命令运行，第二个Maven Build...是输入命令运行
+当然，对于内网环境或者微服务一般都会去声明自己的 repository
 
-![12](12.jpg)
-
-1. 直接运行tomcat:run
-
-	maven内置了tomcat,可以直接运行
-
-	![13](13.png)
-
-	如果需要使用较新版本的tomcat，比如使用注解
-	
-	可以通过插件的方式安装tomcat7，运行命令也就变成了tomcat7:run,配置如下
-
-	```
-	<plugin>
-		<groupId>org.apache.tomcat.maven</groupId>
-		<artifactId>tomcat7-maven-plugin</artifactId>
-		<version>2.1</version>
-		<configuration>
-			<path>/</path>
-			<contextReloadable>true</contextReloadable>
-			<uriEncoding>UTF-8</uriEncoding>
-		</configuration>
-	</plugin>
-	```
-
-2. 使用eclipse的配置好的tomcat
-
-	build之后会有war包，可以工具会自动扫描项目里面的war包，然后部署到自己的tomcat上面
-
-	![14](14.png)
-
-## 通过maven对项目进行拆分
-
-比如将web项目的三层从一个项目拆分成三个项目
-
-每个项目完成后通过模块的方式再和主项目进行组合
-
-主项目并不写代码，只是把依赖配置好，然后每个子模块再添加主项目这个依赖
-
-最后运行主项目即可
-
-1. 创建父工程(Maven Project)，配置pom.xml
-
-2. 把父工程install到本地仓库
-
-3. 创建子工程(Maven Module),设置选择父工程，设置打包方式为jar
-
-4. 解决子工程间的类依赖，只需要把依赖的子项目install后再添加依赖即可
-
-```
-ssh-parent
-    ssh-dao
-    ssh-service
-    ssh-web
+```xml
+<repositories>
+  <repository>
+    <snapshots>
+      <enabled>false</enabled>
+    </snapshots>
+    <id>central</id>
+    <name>Central Repository</name>
+    <url>https://repo.maven.apache.org/maven2</url>
+  </repository>
+</repositories>
+<pluginRepositories>
+  <pluginRepository>
+    <releases>
+      <updatePolicy>never</updatePolicy>
+    </releases>
+    <snapshots>
+      <enabled>false</enabled>
+    </snapshots>
+    <id>central</id>
+    <name>Central Repository</name>
+    <url>https://repo.maven.apache.org/maven2</url>
+  </pluginRepository>
+</pluginRepositories>
 ```
 
-## 私服的安装
+镜像就是仓库的镜像，类似代理把，对于 repository 的 id，如果有配置 mirrorOf 为 repositoryId 的镜像，则会优先从镜像地址去下载。比如 maven 默认的官方速度太慢，一般都会在 maven 的配置文件中配置一个名为 central 的镜像
 
-即在本地搭建一个和apache的中心仓库很想的本地Maven仓库管理器
+```xml
+<mirror>
+  <id>aliyunmaven</id>
+  <mirrorOf>central,jcenter</mirrorOf>
+  <name>阿里云公共仓库</name>
+  <url>https://maven.aliyun.com/repository/public</url>
+</mirror>
+```
 
-可以供局域网使用，先到本地仓库找jar包，再到私服找jar包，最后才到互联网上的中心仓库寻找
+## 分环境打包
 
-Nexus是一个强大的Maven仓库管理器，它极大地简化了自己内部仓库的维护和外部仓库的访问。
-利用Nexus你可以只在一个地方就能够完全控制访问 和部署在你所维护仓库中的每个Artifact。
-Nexus是一套“开箱即用”的系统不需要数据库，它使用文件系统加Lucene来组织数据.....
+通过命令传入不同的参数来区分环境,可通过传入参数如`-Dxxx=prd`,或指定 profile 实现
+
+```
+mvn package -P prd
+```
+
+方式 1，结合 maven-war-plugin 替换打包后的文件
+
+```xml
+<profiles>
+    <profile>
+        <id>prd</id>
+        <build>
+            <plugins>
+                <plugin>
+                    <groupId>org.apache.maven.plugins</groupId>
+                    <artifactId>maven-war-plugin</artifactId>
+                    <version>2.2</version>
+                    <configuration>
+                        <archive>
+                            <addMavenDescriptor>false</addMavenDescriptor>
+                        </archive>
+                        <webResources>
+                            <resource>
+                                <!-- 覆盖配置文件-->
+                                <directory>config-prd</directory>
+                                <targetPath>WEB-INF/classes</targetPath>
+                                <filtering>true</filtering>
+                            </resource>
+                        </webResources>
+                    </configuration>
+                </plugin>
+            </plugins>
+        </build>
+    </profile>
+</profiles>
+```
+
+方式 2，替换配置文件中的占位符,格式为`${name}`
+
+```xml
+<properties>
+  <jdbc.url>local_url</jdbc.url>
+</properties>
+
+<profiles>
+  <profile>
+    <id>prd</id>
+    <properties>
+      <jdbc.url>prd_url</jdbc.url>
+    </properties>
+  </profile>
+</profiles>
+
+<build>
+  <resources>
+    <resource>
+      <directory>src/main/resources/</directory>
+      <filtering>true</filtering>
+      <includes>
+        <include>**/*.properties</include>
+      </includes>
+    </resource>
+  </resources>
+</build>
+```
