--- a/_posts/2016-03-10-CentOS搭建开发环境.md
+++ b/_posts/2016-03-10-CentOS搭建开发环境.md
@@ -273,8 +273,9 @@ set global validate_password_length=4;
 # 设置密码，由于安全策略，不要设置过于简单的密码
 set password = password('Xxxxxxx');
 
-# 新建root用户，允许远程访问，授予所有权限
+# 新建root用户，允许远程访问，授予所有权限，完事后在mysql.user表把  Grant_priv改成Y，然后重启
 grant all privileges on *.* to 'root'@'%' identified by '设置新用户密码';
+# grant all privileges on *.* to 'root'@'%' identified by '设置新用户密码' WITH GRANT OPTION;
 flush privileges;
 ```
 
