--- a/_posts/2018-07-08-go笔记.md
+++ b/_posts/2018-07-08-go笔记.md
@@ -699,6 +699,32 @@ i := <-c
 fmt.Println(i)
 ```
 
+channel 的用法很多，比如使用两个有缓冲的 channel 就能实现控制协程的数量。另外如果不知道总任务数的话可以通过 channel+WaitGroup 的方式实现
+
+```go
+// 总任务数
+total := make(chan byte, len(arr))
+// 并发执行数
+limit := make(chan byte, 20)
+
+defer close(total)
+defer close(limit)
+
+for _, v := range arr {
+  limit <- 1
+
+  go func(v int) {
+    doSomething(v)
+    <-limit
+    total <- 1
+  }(v)
+}
+
+for i := 0; i < len(arr); i++ {
+  <-total
+}
+```
+
 ## 并发锁
 
 在并发编程中，通锁来保证数据读取和写入的正确性，通过 channel 的阻塞，我们可以很容易的实现锁，同时 golang 也通过 channel 封装好了各种锁模型的实现，这些锁位于`sync`包中，常见的方法如下
