--- a/_posts/2017-07-19-面向对象与原型.md
+++ b/_posts/2017-07-19-面向对象与原型.md
@@ -14,7 +14,7 @@ categories: [前端]
    var Student = {
      name: 'Robot',
      height: 1.2,
-     run: function() {
+     run: function () {
        console.log(this.name + ' is running...')
      }
    }
@@ -29,7 +29,7 @@ categories: [前端]
    ```js
    function Student(name) {
      this.name = name
-     this.hello = function() {
+     this.hello = function () {
        alert('Hello, ' + this.name + '!')
      }
    }
@@ -60,23 +60,22 @@ categories: [前端]
 
 ## 原型与隐式原型
 
-`prototype` 称为原型
+`prototype` 称为原型，是构造函数的一个属性
 
-`__proto__` 称为隐式原型
+`__proto__` 称为隐式原型，是对象的一个属性
 
-prototype 是构造函数的属性，而 `__proto__` 是对象的属性
-
-为了实现继承，因此对象的隐式原型指向构造函数的原型
+为了实现继承，因此对象隐式原型指向构造函数的原型
 
 ```js
 function Person(age) {
   this.age = age || 0
 }
-Person.prototype.print = function() {
+Person.prototype.print = function () {
   console.log('age', this.age)
 }
 let p = new Person(18)
 console.log(p.__proto__ == Person.prototype)
+console.log(Person.prototype.constructor == Person)
 console.log(p.print())
 ```
 
@@ -93,7 +92,7 @@ arr.push('we')
 console.log(arr)
 ```
 
-同时构造函数也是一个对象，他也具有`__proto__`属性
+同时构造函数也是一个对象，他也具有`__proto__`属性。Person 本身是一个函数，它的构造方法是 Function
 
 ```js
 Person.__proto__ == Function.prototype
@@ -109,6 +108,7 @@ console.log(Array.__proto__)
 console.log(Number.__proto__)
 console.log(Date.__proto__)
 
+// Function.__proto__.__proto__
 [native code].__proto__ == Object.prototype
 ```
 
@@ -246,3 +246,5 @@ console.log(new Person(18))
 [为什么 Function.prototype 可以直接执行](https://www.zhihu.com/question/323462380/answer/682017098)
 
 [阮一峰的网络日志](http://www.ruanyifeng.com/blog/2010/05/object-oriented_javascript_encapsulation.html)
+
+[JavaScript 面向对象详解（二）](https://mp.weixin.qq.com/s/TeBnVpvb_sewv3np7TKc-Q)
