--- a/_posts/2018-07-08-go笔记.md
+++ b/_posts/2018-07-08-go笔记.md
@@ -426,7 +426,7 @@ Recover
 
 自定义异常
 
-```
+```go
 type MyError struct {
 	Time    time.Time
 	Message string
@@ -442,6 +442,31 @@ func q(a int) error {
 	}
 	var aE = eee.MyError{time.Now(),"666"}
 	return &aE
+}
+```
+
+模拟 try-catch
+
+```go
+func tryCatch(a int) int {
+  var resp = 0
+	// try
+	func() {
+		// catch
+		defer func() {
+			err := recover()
+			if err != nil {
+				resp = -1
+			}
+		}()
+		// code
+		if a == 0 {
+			panic("手动模拟panic")
+		} else {
+			resp = a * a
+		}
+	}()
+	return resp
 }
 ```
 
