--- a/_posts/2019-11-18-nginx-常用配置.md
+++ b/_posts/2019-11-18-nginx-常用配置.md
@@ -63,3 +63,37 @@ location /app01/ {
     proxy_pass http://127.0.0.1:8080;
 }
 ```
+
+## 使用 try_files 修改静态资源路径
+
+```conf
+server {
+  root            /apps/abc.com/;
+
+  location ~ ^/coverage/s([1|3|6|7])/res/product/([0-9a-z]+)/(.+)\.html$ {
+    add_header    Cache-Control  no-cache;
+    try_files     "/product/$2/$3.html" =404; # 相对于root
+  }
+
+  location ~ ^/coverage/s([1|3|6|7])/res/product/([0-9a-z]+)/(.*) {
+      # 把正则结果起来，后面再次使用正则后 $2 $3 就变了
+      set $target  /product/$2/$3;
+
+      if ($request_uri ~ /$) {
+          rewrite /$ "${request_uri}index.html" last;
+      }
+
+      add_header    Cache-Control  max-age=3600;
+      try_files     $target =404;
+  }
+}
+```
+
+## 配置 gzip
+
+```conf
+gzip             on;
+gzip_comp_level  5;
+gzip_min_length  4k;
+gzip_types       text/plain text/css text/javascript text/xml application/javascript application/json;
+```
