--- a/_posts/2020-07-16-react快速上手.md
+++ b/_posts/2020-07-16-react快速上手.md
@@ -425,17 +425,19 @@ const style1 = {
 ```
 
 {% raw %}
+
 ```
 <div>
   <p style={style1}>{this.props.age}</p>
   <p style={{ ...style1, color: 'blue' }}>{this.state.value}</p>
 </div>
 ```
+
 {% endraw %}
 
 另一种写法是使用 CSS Modules
 
-create-react-app 脚手架都配置好了，当导入`.module.css/.module.less/.module.scss`结尾的文件时，它会自动重命名 class 的类名，默认情况下重命名的规则是`组件名_类名__hash`。看起来不错，假如有个类命名带横线时`.main-title`就没办法取出了
+create-react-app 脚手架都配置好了，当导入`.module.css/.module.less/.module.scss`结尾的文件时，它会自动重命名 class 的类名，默认情况下重命名的规则是`组件名_类名__hash`。
 
 app.module.css
 
@@ -474,7 +476,28 @@ render() {
 }
 ```
 
-还有一种方案是 CSS in JS，CSS 由 JavaScript 生成而不是在外部文件中定义。改功能并不是 React 的一部分，而是由第三方库提供，比如 styled-components
+还有一种方案是 CSS in JS，如 styled-components，通过使用方式可以看到它其实是一个高阶组件，由于没有和 webpack 交互，无法在打包时单独抽取为 css 文件，由于是代码生成的，所以肯定是能实现 Vue 的 scoped style 的效果。
+
+```bash
+npm i styled-components -S
+```
+
+```js
+// 没想到吧,函数还可以这样调用!!!
+const BoxStyle = styled.div`
+  button {
+    width: ${props => props.width};
+    border: none;
+    outline: none;
+  }
+`
+```
+
+```
+<BoxStyle width="100px">
+  <button onClick={this.toggle}>点击</button>
+</BoxStyle>
+```
 
 ## 其他知识点
 
