--- a/_posts/2020-07-16-react快速上手.md
+++ b/_posts/2020-07-16-react快速上手.md
@@ -579,6 +579,40 @@ function Example(props) {
 }
 ```
 
+## 最佳实践
+
+React 的生态圈可谓是五花八门，不像 Vue 那样都有官方的库，导致无法愉快地使用 React 编码
+
+项目结构可以参考 [hy-react-web-music](https://github.com/coderwhy/hy-react-web-music)这个项目
+
+```
+public
+src/assets/css
+src/assets/img
+src/components/album-cover/index.js
+src/components/album-cover/style.js # styled-components
+pages/discover/index.js # router 对应的组件，按照url路径划分
+pages/discover/style.js
+pages/router/index.js   # router 配置文件
+services/album.js       # api 接口
+store/index.js          # 全局状态
+store/reducer.js
+App.js
+index.js
+```
+
+写样式体验下来目前就就两个用起来不错：`CSS Modules`,`styled-components`
+
+简单的脚手架可以使用`create-react-app`推荐搭配`craco`使用来添加更多的 webpack 插件
+
+另外大部分项目都是使用[UmiJS](https://umijs.org/)作为脚手架
+
+组件库[AntDesign](https://ant.design/index-cn)的知名度比较高
+
+想要实现 Vue 那样的组件过渡动画可以使用`react-transition-group`
+
+状态管理的话必定是`redux`了
+
 ## 总结
 
 大致了解下 React 后发现还是 Vue 香
