--- a/_posts/2020-07-16-react快速上手.md
+++ b/_posts/2020-07-16-react快速上手.md
@@ -22,13 +22,17 @@ cd demo
 npm run start
 ```
 
-如果你需要定制 webpack 的配置可以执行`run run eject`,字面意思就是弹射出 webpack 配置。注意这个操作书不可逆向的，如果需要回退，不仅仅是代码的回退，还需要删除 node_modules 文件夹进行重新安装
+如果你需要定制 webpack 的配置可以执行`run run eject`,字面意思就是弹射出 webpack 配置，将 webpack 的配置暴露出来，注意这个操作是不可逆的。
+
+不过使用`@craco/craco`可以在不执行`run run eject`的情况下修改 webpack 配置，一般也都是这么做的。
 
 ## JSX 语法
 
 这个就不多说了，在 Vue 里面也用过 JXS 语法，两者用法是一致的，使用三元表达式或者使用与运算的懒惰特性来动态显示隐藏节点，使用 map 函数来循环输出节点
 
-对于在元素上声明的属性可以在组件的 props 中拿到，对于 class 属性，建议使用 className 属性来定义，以此来和原生定义进行区分
+对于在元素上声明的属性可以在组件的 props 中拿到；对于 style 属性，只支持对象，无法写字符串；对于 class 属性使用 className 属性来定义，只支持字符串，不支持`['c1', 'c2']`和`{c1: true, c2: false}`这种写法，不过可以写成`['c1', 'c2'].join(' ')`和`Object.keys(obj).filter(k=>obj[k]).join(' ')`
+
+注意： 字符串，数字直接渲染。数组会被渲染成列表，里面可以是数字/字符串/JSX，而不是调用它的 toString 方法，**对象无法渲染，会报错**
 
 对于 Vue 中的 slot，在 React 是把它当作一个 props 来处理的,在 props 中有个 children 存放着组件的一级子节点。这种定义方式似乎很灵活，缺点就是不够语义化
 
@@ -39,12 +43,28 @@ npm run start
 </div>
 ```
 
-你看，通过简单的定义就实现了 Vue 中的具名插槽
+另外对于具名插槽，实现起来也是很方便。由于 props 也可以传递 JSX，你甚至不许需要写插槽也能实现
 
 ```
-<div>
-  {this.props.children.find(v => v.props.name === '1')}
-  {this.props.children.find(v => v.props.name === '2')}
+<Dialog>
+  <div name="head">title</div>
+  <div name="body">body</div>
+</Dialog>
+
+<div class="dialog">
+  {props.children.find(v => v.props.name === 'head')}
+  {props.children.find(v => v.props.name === 'body')}
+</div>
+```
+
+```
+let head = <div>title</div>
+let body = <div>body</div>
+<Dialog head={head} body={body} />
+
+<div class="dialog">
+  {props.head ? props.head : null}
+  {props.body ? props.body : null}
 </div>
 ```
 
@@ -54,7 +74,7 @@ npm run start
 
 ## 组件
 
-分为函数组件和 Class 组件
+分为函数组件和 Class 组件。函数组件没有生命周期函数，没有组件实例(this)，不支持创建 state。相比较之下 Class 组件就显得功能齐全了，不过 Hook 出现了之后，Class 组件能实现的，函数组件也能实现。
 
 ```
 function App(props) {
@@ -66,26 +86,55 @@ function App(props) {
 }
 ```
 
-上面的函数组件可以改写为 Class 组件。在开发的过程中肯定是推荐使用使用 Class 组件的，因为可以在里面定义各种生命周期函数和点击事件
+```
+class App extends React.Component {
+  constructor(props, context) {
+    super()
+    console.log(this)
+    console.log(...arguments)
+  }
+  render(h) {
+    return (
+      <div className="App">
+        <h1>{this.props.title}</h1>
+      </div>
+    )
+  }
+}
+```
 
-这里关于点击事件有一个 this 指向的坑，解决方案是使用 bind 或者箭头函数,不然的事件处理函数内拿到的 this 是 undefined
-
-关于使用 bind 也有好几种方式，可以在 constructor 中 bind，也可以在事件发生时 bind
+在 class 组件事件绑定中的 this 有个坑需要注意下，因为原生事件的 this 是绑定到 DOM 上的，而事件经过 React 合成后 this 的指向就有问题了，所以默认就干脆让它指向了`undefined`,下面是几种修改事件 this 指向的写法
 
 ```
 class App extends React.Component {
-  divClick = () => {
+  click1() {
+    // undefined
     console.log(this)
   }
-  spanClick = function () {
+  click2 = () => {
     console.log(this)
+  }
+  click3() {
+    console.log(this)
+  }
+  click4() {
+    console.log(this)
+  }
+  click5() {
+    console.log(this)
+  }
+  constructor(){
+    super()
+    this.click5 = this.click5.bind(this)
   }
   render() {
     return (
       <div className="App">
-        <h1>{this.props.title}</h1>
-        <div onClick={this.divClick}>123</div>
-        <span onClick={this.spanClick.bind(this)}>456</span>
+        <div onClick={this.click1}>click1</div>
+        <div onClick={this.click2}>click2</div>
+        <div onClick={this.click3.bind(this)}>click3</div>
+        <div onClick={() => {this.click4()}}>click4</div>
+        <div onClick={this.click5}>click5</div>
       </div>
     )
   }
@@ -98,7 +147,7 @@ class App extends React.Component {
 
 Vue 中实现数据绑定靠的是数据劫持（Object.defineProperty()）和发布订阅模式，一切都是自动的。在 React 中，需要显式地去调用 setState 去改变 state 中的数据
 
-出于性能考虑，React 可能会把多个 setState() 调用合并成一个调用，他是异步的，比如下面的代码可能会得不到预期的结果
+出于性能考虑，setState 的过程是异步的，React 可能会把多个 setState() 调用合并成一个调用，比如下面的代码可能会得不到预期的结果
 
 ```js
 // num 5
@@ -107,7 +156,7 @@ this.setState({ num: 0 })
 this.setState({ num: this.state.num + 1 })
 ```
 
-如果你在更新 state 时依赖原有 state 的内容，为了解决这一问题，官方建议使用下面的写法
+好在 setState 的第二个参数可以传入一个回调函数，在更新成功后会触发。
 
 ```js
 this.setState((state, props) => {
@@ -117,7 +166,9 @@ this.setState((state, props) => {
 })
 ```
 
-还有一个就是 state 初始化，一般都是在 constructor 构造函数中完成，但是如果 state 中的数据依赖 props 中的数据，后续 props 改变时 state 时不会变化的。
+实际上在组件生命周期或 React 合成事件中，setState 是异步；在 setTimeout 或者原生 dom 事件中，setState 是同步。
+
+还有一个就是 state 初始化，一般都是在 constructor 构造函数中完成，但是如果 state 中的数据依赖 props 中的数据，后续 props 改变时 state 是不会变化的。
 
 若期望跟着变化，可以实现生命周期中的 getDerivedStateFromProps。注意这里的方法是静态的拿不到 this
 
@@ -169,6 +220,45 @@ this.setState(prevState => return newState)
 
 如果上面的都不好使，可以使用 forceUpdate
 
+## 组件性能优化
+
+有时 state 里面的数据是不和视图渲染绑定的，每次 setState 都会触发重新渲染。通过`shouldComponentUpdate`生命周期函数，我们可以拿到 state 和 props 变化后还未更新上去的值和当前 state 进行手动比较来判断是否需要渲染。默认情况下，该函数始终返回 true，也就是只要 state 发生改变，就会调用 render 方放法。
+
+为了避免所有的组件类都需要重写`shouldComponentUpdate`函数，只需要继承 PureComponent 就行了，他对 props 和 state 进行浅层比较，对于函数式组件同样提供了`memo`高阶组件进行包裹。
+
+但是也要注意，由于 PureComponent 是浅层比较，下面的第一种写法是不会触发更新的。
+
+```
+class App extends React.PureComponent {
+  constructor() {
+    super()
+    this.state = {
+      arr1: [1, 2, 3],
+      arr2: [1, 2, 3]
+    }
+  }
+  update1() {
+    this.state.arr1.push(1)
+    this.setState({ arr1: this.state.arr1 })
+  }
+  update2() {
+    let arr = this.state.arr2.slice(0)
+    arr.push(1)
+    this.setState({ arr2: arr })
+  }
+  render() {
+    return (
+      <div>
+        <span>{this.state.arr1}</span>
+        <span>{this.state.arr2}</span>
+        <button onClick={this.update1.bind(this)}>update1</button>
+        <button onClick={this.update2.bind(this)}>update2</button>
+      </div>
+    )
+  }
+}
+```
+
 ## props 校验/默认值
 
 通过 propTypes 中声明的校验器对 propName 进行校验，建议每个组件都设置 propTypes，别人通过看 propTypes 就能知道该组件可以传入哪些 props
@@ -179,6 +269,7 @@ class App2 extends React.Component {
     return <div>{this.props.age}</div>
   }
 }
+// 感觉有点分散，可以写成Class的静态属性
 App2.propTypes = {
   age: function (props, propName, componentName) {
     if (typeof props[propName] != 'number') {
@@ -221,22 +312,64 @@ class App2 extends React.Component {
 
 ## 表单双向绑定
 
-这里的双向绑定和 Vue 中的 v-model 差的太多了，React 实现双向绑定都是监听 input 事件手动去 setState
+这里的双向绑定和 Vue 中的 v-model 差的太多了，React 实现双向绑定的方式是在 change 后手动去 setState
 
 这里有个坑，传入的 event 是 React 包装过的，当函数执行完毕，里面的东西就没了，所以在控制台打印的 event 里面的 target 是 null，解决这个问题手动调用下`event.persist()`就好了
 
+为了处理拼音候选的问题，你可能会按照下面的方式去封装，其实只需要监听`onChange`事件就行了，React 应该对他做了封装，因为原生的`onchange`是在失去焦点的时候触发，但是 React 的`onChange`只要发生改变就会触发同时也替我们解决了拼音候选的问题
+
 ```
-handleChange = event => {
-  this.setState({
-    num: Number(event.target.value)
-  })
-}
-render() {
+function MyInput(props) {
+  let composition = false
+
+  function onInput() {
+    if (!composition && props.onInput) {
+      props.onInput(...arguments)
+    }
+  }
+
+  function onCompositionStart() {
+    composition = true
+  }
+
+  function onCompositionEnd() {
+    composition = false
+    onInput(...arguments)
+  }
+
   return (
-    <div className="App">
-      <input type="number" value={this.state.num} onChange={this.handleChange} />
-    </div>
+    <input
+      type="text"
+      {...props}
+      onInput={onInput}
+      onCompositionStart={onCompositionStart}
+      onCompositionEnd={onCompositionEnd}
+    />
   )
+}
+```
+
+```
+export default class extends React.Component {
+  constructor(props) {
+    super()
+    this.state = {
+      value: ''
+    }
+  }
+  handleChange(e) {
+    this.setState({
+      value: e.target.value
+    })
+  }
+  render(h) {
+    return (
+      <React.Fragment>
+        <div>{this.state.value}</div>
+        <input type="text" value={this.state.value} onChange={this.handleChange.bind(this)} />
+      </React.Fragment>
+    )
+  }
 }
 ```
 
@@ -256,7 +389,7 @@ render() {
 }
 ```
 
-## 数据共享和组件通信
+## 组件数据共享
 
 方案一，层层传递 props
 
@@ -303,7 +436,7 @@ class App extends React.Component {
 
 要通信的两个组件和他们的公共父组件相距太远时，需要为中间每一个中间组件传递 props 是很麻烦的。使用 context, 我们可以避免通过中间元素传递 props
 
-声明一个 Context,`React.createContext()`接收一个参数，当使用 Consumer 时，会找到离他最近的 Provider，未找到 Provider，未找到时该默认值
+声明一个 Context,`React.createContext()`接收一个参数，当使用 Consumer 时，会找到离他最近的 Provider，未找到 Provider。未找到时该默认值，一旦在 JSX 中写了 Provider 则必须要带上 value 属性。
 
 ```js
 const ThemeContext = React.createContext()
@@ -363,7 +496,7 @@ class App3 extends React.Component {
 }
 ```
 
-使用了 contextType 后，上面的写法可以简化为如下写法，同时在各个生命周期函数中都可以通过 this 拿到 Context。同时也说明了一个问题，一个组件可能会消费多个 context，但是最好还是消费一个 context
+使用了 contextType 后，上面的写法可以简化为如下写法，同时在各个生命周期函数中都可以通过 this 拿到 Context。同时 contextType 也可以写成一个 map，从而支持消费多个 context。
 
 ```
 class App3 extends React.Component {
@@ -378,6 +511,54 @@ class App3 extends React.Component {
   }
 }
 App3.contextType = ThemeContext
+```
+
+注意上面写法在 context 更新时会导致所有子组件都更新，参考[避免 React Context 导致的重复渲染](https://zhuanlan.zhihu.com/p/50336226)。应该按照下面的写法去写
+
+```
+class ThemeProvider extends React.Component {
+  constructor() {
+    super()
+    this.state = {
+      now: 'light',
+      toggle: this.toggleTheme.bind(this)
+    }
+  }
+  toggleTheme() {
+    let now = this.state.now
+    let next = now === 'dark' ? 'light' : 'dark'
+    this.setState({ now: next })
+  }
+  render() {
+    return <ThemeContext.Provider value={this.state}>{this.props.children}</ThemeContext.Provider>
+  }
+}
+
+class App extends React.Component {
+  render() {
+    return (
+      <div className="App">
+        <ThemeProvider>
+          <App2></App2>
+          <App3></App3>
+        </ThemeProvider>
+      </div>
+    )
+  }
+}
+```
+
+方案三，使用 Redux
+
+略...
+
+## 组件相互调用
+
+```
+// TODO
+函数组件实例
+refs
+event bus
 ```
 
 ## 组件生命周期
@@ -619,7 +800,9 @@ index.js
 
 感觉 React 的一些概念很难搞懂，比如 Render Props、Hook。相比较而言还是 Vue 的一些概念简单易懂，也可能是 Vue 的中文文档写的比较好吧。
 
-其次就是脚手架，官方的 create-react-app 可以说没留给用户配置的地方，除非你把 webpack 的配置给弹射出来去手动配置，相比较之下 Vue-cli 真的是非常人性化了。不过还好可以使用 UmiJS 这类的第三方脚手架
+其次就是性能，稍微写的不规范就可能导致整个页面重新渲染。
+
+还有就是脚手架，官方的 create-react-app 可以说没留给用户配置的地方，除非你把 webpack 的配置给弹射出来去手动配置，相比较之下 Vue-cli 真的是非常人性化了。不过还好可以使用 UmiJS 这类的第三方脚手架
 
 ## 参考
 
@@ -629,4 +812,16 @@ index.js
 
 [CSS Modules 用法教程](http://www.ruanyifeng.com/blog/2016/06/css_modules.html)
 
-[React 系列十一 - React 中的 CSS](https://mp.weixin.qq.com/s/oywTpNKEikMXn8QTBgITow)
+[React Hooks 入门教程](http://www.ruanyifeng.com/blog/2019/09/react-hooks.html)
+
+[轻松学会 React 钩子：以 useEffect() 为例](http://www.ruanyifeng.com/blog/2020/09/react-hooks-useeffect-tutorial.html)
+
+[避免 React Context 导致的重复渲染](https://zhuanlan.zhihu.com/p/50336226)
+
+[React 系列（一） - 邂逅 React 开发](https://mp.weixin.qq.com/s/zCt4l31aqf4v1qGorG6tcA)
+
+[React 系列（七） - 非父子组件通信](https://mp.weixin.qq.com/s/XRzop1WDCbXqW6Kzv3LxMA)
+
+[React 系列（十） - 高阶组件以及组件补充](https://mp.weixin.qq.com/s/Fgfu2kwLBJJOnGEXoKsvpg)
+
+[React 系列（十一） - React 中的 CSS](https://mp.weixin.qq.com/s/oywTpNKEikMXn8QTBgITow)
