--- a/_posts/2020-07-16-react快速上手.md
+++ b/_posts/2020-07-16-react快速上手.md
@@ -554,12 +554,68 @@ class App extends React.Component {
 
 ## 组件相互调用
 
+组件的相互调用本质上就是一个组件能够拿到另一个组件的实例，然后通过实例去调用组件的方法。Class 组件是有实例的，但是函数组件是无法拿到实例的。
+
+通过 ref 属性可以拿到 Class 组件和 DOM 的实例。
+
 ```
-// TODO
-函数组件实例
-refs
-event bus
+<div>
+  <ClassComponent ref="ref1"></ClassComponent>
+  <h1 ref="ref2">123</h1>
+</div>
 ```
+
+函数式组件没有实例，所以下面的写法会报错的
+
+```
+<FunctionComponent ref="ref3"></FunctionComponent>
+```
+
+函数式组件虽说没有实例，但是函数式组件内的组件是有实例的，可以传递给父组件。通过下面不太正规的写法，可以通过 props 把组件内的 ref 绑定到父组件的属性上
+
+```
+function FunctionComponent(props) {
+	return <div ref={props.ref3}>FunctionComponent</div>;
+}
+
+<FunctionComponent ref3={this.ref3}></FunctionComponent>
+```
+
+为了规范上面的做法，官方提供了高阶组件来包装函数式组件来实现上面的写法。从能够使用 ref 属性来看，应该是反悔了一个新的 Class 组件
+
+```
+const FunctionComponent = React.forwardRef(function (props, ref) {
+	return <div ref={ref}>FunctionComponent</div>;
+});
+
+<FunctionComponent ref="ref3"></FunctionComponent>
+```
+
+对于非父子父组件之间的相互调用，可以通过发布-订阅的模式来实现，比如 Vue 中的 EventBus。React 中虽说没有 EventBus。但是可以引入第三方库。虽说通过这种方式能实现我们的需求，但是最好还是通过共享数据实现组件之间的通信，毕竟这样更符合组件的思想。
+
+```
+yarn add events
+```
+
+## 两种特殊的渲染
+
+1. Fragment
+
+类似于 Vue 中 template，不过更强大， Vue 的 template 虽说也是渲染一个不占位置的节点，但是是不能作为 Root 的，也就是一个组件渲染出来必须只能有一个 Root 节点，但是 Fragment 却可以直接作为 Root 节点
+
+```
+<React.Fragment>
+  <span>Hello</span>
+  {/*  简写方式 不支持props */}
+  <>
+    <span>World</span>
+  </>
+</React.Fragment>
+```
+
+2. Portal
+
+虽然写在了某个组件下面，可以控制实际渲染到的位置。和`ReactDOM.render`差不多，不过 `ReactDOM.createPortal` 返回的是一个组件
 
 ## 组件生命周期
 
@@ -585,6 +641,51 @@ event bus
 1. componentWillUnmount()
 
 ![lifecycle](lifecycle.png)
+
+## DOM 操作
+
+ReactDOM 的三个常用 API
+
+```
+render()
+unmountComponentAtNode()
+findDOMNode()
+```
+
+Toast 组件实现
+
+toast 组件是一种特殊的组件，因为他不是写在别的组件内的，而是通过调用函数去触发，完成之后再自动销毁。
+
+在 Vue 中实现这个功能一般是通过 Plugin 功能把调用方式挂载到全局，调用方法后，通过 Vue 把组件的 DOM 渲染出来，通过原生的 语法把 DOM 插入到网页的指定位置，在销毁时清除事件移除 DOM。React 中也是类似的操作
+
+下面是一个简单的事件，要实现动画的话推荐使用`react-transition-group`
+
+```
+function toast(text, timeout) {
+  let container = document.querySelector('body>.toast-container')
+  if (!container) {
+    container = document.createElement('div')
+    container.className = 'toast-container'
+    document.body.appendChild(container)
+  }
+
+  let dom = document.createElement('div')
+  container.appendChild(dom)
+
+  let toast = <div onClick={() => console.log('test')}>{text}</div>
+  ReactDOM.render(toast, dom)
+
+  setTimeout(() => {
+    ReactDOM.unmountComponentAtNode(dom) // 移除时间，清空DOM
+    container.removeChild(dom)
+    dom = null
+    if (container.childElementCount === 0) {
+      container.parentNode.removeChild(container)
+      container = null
+    }
+  }, timeout || 3000)
+}
+```
 
 ## CSS 样式
 
